<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_calculate">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:width="375dp"
        android:height="65dp"
        android:text="@string/creditCal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="20dp"
        android:textSize="24dp" />
    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="519dp"
        android:background="@color/green"
        android:layout_marginTop="171dp"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_log"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/button_style"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="30dp"
        android:onClick="rass"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ras"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="140dp"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:onClick="back"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glav"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"/>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:background="@drawable/creditslider"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="205dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditCount"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            >
        </TextView>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:max="100000"
            android:progress="50000"
            android:progressBackgroundTint="@color/grayBack"
            android:progressTint="@color/gray"
            android:thumbTint="@color/green"
            android:id="@+id/seek_bar"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginBottom="7dp"
                android:text="@string/creditMin"
                android:textColor="@color/black"
                android:textFontWeight="300"
                android:layout_marginEnd="190dp"
                android:textSize="12sp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditMax"
                android:textColor="@color/black"
                android:textSize="12dp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="295dp"
        android:layout_marginLeft="125dp"
        android:width="160dp"
        android:height="35dp"
        android:background="@drawable/vvodsrokcred"
        android:paddingTop="5dp"
        android:singleLine="false"
        android:hint="@string/vvodcreditSrok"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textFontWeight="300"
        android:id="@+id/srock"
        >
    </EditText>

    <TextView
        android:id="@+id/bar"
        android:text="@string/wantget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:width="161dp"
        android:height="55dp"
        android:background="@drawable/ejplat"
        android:paddingTop="8dp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="125dp"
        android:singleLine="false"
        android:text="@string/creditEj"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:id="@+id/endless">
    </TextView>


</RelativeLayout>