<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".CalcActivity"
    android:id="@+id/three">


    <TextView
        android:layout_marginTop="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:width="375dp"
        android:height="65dp"
        android:text="@string/creditCal"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="41dp"
        android:background="@color/green"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="110dp"
            android:width="268dp"
            android:height="40dp"
            android:layout_marginTop="34dp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="71dp"
            android:background="@drawable/sumcred"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/creditsSum"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="65dp"
            android:width="160dp"
            android:height="35dp"
            android:layout_marginStart="127dp"
            android:layout_marginEnd="124dp"
            android:background="@drawable/vvodsrokcred"
            android:paddingTop="6dp"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:text="@string/creditSrok"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="12sp">
        </TextView>
        <TextView
            android:id="@+id/mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:width="268dp"
            android:height="55dp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="71dp"
            android:background="@drawable/ejplatbig"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/creditEj"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="18sp">
        </TextView>
        <Button
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_darkgreen"
            android:text="@string/reg"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:layout_marginStart="33dp"
            android:layout_marginBottom="28dp"
            android:onClick="reg">
        </Button>
    </LinearLayout>
</LinearLayout>